js262/test/language/module-code/parse-err-decl-pos-import-for-in-const.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

for (const y in [])
  import v from './decl-pos-import-for-in-const.js';
